tests/models/struct/unnamed/unit/fail/min_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_length = 2)]
    ()
);
fn main() {}
